# media-player

./: CMakeLists.txt
lib/ffmpeg/: CMakeLists.txt
src/: .main.cpp.swp  AVPlayer.cpp  AVPlayer.h  loadFrame.cpp  main.cpp
